Обновли example.env

--- a/example.env
+++ b/example.env
@@ -1,1 +1,6 @@
 TG_TOKEN=649494494:tokenbezkavichekizbotfather
+ID_INFO_CHAT=-333332222
+ID_CHANNEL=@kanal_login
+# Можно Id
+ID_ADMIN=admin_login
+ID_SUPER_USER=user_login
